<resources>
    <string name="app_name">Calculator</string>
    <string name="result">Result</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="divided">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">X</string>
    <string name="calculator">CALCULATOR</string>
    <string name="currency">CURRENCY</string>
    <string name="unit">UNIT</string>
    <string name="exchange">exchange</string>
    <string name="update_list">Update List</string>
    <string name="convert">convert</string>
    <string name="unit_">Unit</string>
    <string-array name="currency">
        <item>TWD</item>
        <item>EUR</item>
        <item>USD</item>
        <item>THB</item>
        <item>JPY</item>
        <item>CNY</item>
        <item>GBP</item>
    </string-array>
    <string-array name="types">
        <item>acceleration</item>
        <item>angle</item>
        <item>apparentPower</item>
        <item>area</item>
        <item>charge</item>
        <item>current</item>
        <item>digital</item>
        <item>each</item>
        <item>energy</item>
        <item>force</item>
        <item>frequency</item>
        <item>illuminance</item>
        <item>length</item>
        <item>mass</item>
        <item>pace</item>
        <item>partsPer</item>
        <item>pieces</item>
        <item>power</item>
        <item>pressure</item>
        <item>reactiveEnergy</item>
        <item>reactivePower</item>
        <item>speed</item>
        <item>temperature</item>
        <item>time</item>
        <item>voltage</item>
        <item>volume</item>
        <item>volumeFlowRate</item>
    </string-array>
</resources>