<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.75">
        <TextView
            android:id="@+id/txv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txv_calculator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="#D0D0D0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button3"
            android:text="@string/ac"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/plus_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button3"
            android:text="@string/plus_minus"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button3"
            android:text="@string/percent"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/divided"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_2"
            android:text="@string/divided"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_7"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_8"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_9"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_2"
            android:text="@string/x"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_4"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_5"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_6"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_2"
            android:text="@string/minus"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_1"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_2"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_3"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_2"
            android:text="@string/plus"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/_0"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_1"
            android:text="@string/point"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_2"
            android:text="@string/equal"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

</LinearLayout>